# InterCat

./: CMakeLists.txt
InterCat_Test/: CMakeLists.txt
InterCat_Test/src/: main.cpp
include/InterCat/: InterCat.hpp
src/: say_hello.cpp
